--- a/components/project-navbar/ProjectNavbar.module.scss
+++ b/components/project-navbar/ProjectNavbar.module.scss
@@ -140,8 +140,10 @@
         flex-direction: column;
         gap: 2px;
         margin-top: 6px;
-        overflow: overlay;
+        overflow: scroll;
         flex-grow: 100;
+        scrollbar-gutter: auto;
+
 
         &::-webkit-scrollbar-track {
             transition: all 2s;
@@ -166,20 +168,25 @@
             &::-webkit-scrollbar {
                 width: .9rem;
                 height: .9rem;
-                opacity: 1;
+                opacity: .3;
             }
 
             &::-webkit-scrollbar-track {
-                background-color: #dee2e6;
+                // background-color: rgba(222, 226, 230,.4);
+                background: transparent;
                 display: block;
                 width: .9rem;
                 height: .9rem;
+                border-radius: 0.5rem;
+
             }
 
             &::-webkit-scrollbar-thumb {
-                background-color: #adb5bd;
+                background-color: rgba(222, 226, 230, .5);
                 border-radius: var(--brr-regular);
                 border-radius: 0.5rem;
+                opacity: .3;
+
             }
 
         }
